tests/fail/useless-definition-2.el

(let ((x y)
      (y x)) true)
